--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 <body>
 
   <header>
+    <div class="box">
      <div class="purple-box1"></div>
      <div class="purple-box2"></div>
      <div class="purple-box3"></div>
+     </div>
   </header>
 
   <main>
-    <div class="clearfix"></div>
+    <div class="clearfix">
     <div class="green-box"></div>
     <div class="beside">
       <div class="beside-top clearfix">
         <div class="beside-left">
-    <div class="orange-box1"></div>
+      <div class="orange-box1"></div>
       <div class="orange-box2"></div>
       <div class="orange-box3"></div>
         </div>
+      </div>
+    </div>
     </div>
   </main>
     <div class="footer"></div>
