--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   <header>
     <div class="box">
-      <div class="purple-box1"></div>
-      <div class="purple-box2"></div>
-      <div class="purple-box3"></div>
+      <div class="purple-box1 purple-box2 purple-box3"></div>
     </div>
   </header>
 
