--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
       <div class="green-box"></div>
       <div class="beside">
         <div class="beside-left">
-          <div class="orange-box1"></div>
-          <div class="orange-box2"></div>
-          <div class="orange-box3"></div>
-        </div>
+          <div class="orange-box1 orange-box2 orange-box3"></div>
       </div>
     </div>
     </div>
