--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
   <header>
     <div class="box">
-      <div class="purple-box1 purple-box2 purple-box3"></div>
+      <div class="purple">
+      <div class="purple-box1"></div>
+      <div class="purple-box2"></div>
+      <div class="purple-box3"></div>
+    </div>
     </div>
   </header>
 
@@ -23,7 +27,11 @@
       <div class="green-box"></div>
       <div class="beside">
         <div class="beside-left">
-          <div class="orange-box1 orange-box2 orange-box3"></div>
+          <div class="orange">
+          <div class="orange-box1"></div>
+          <div class="orange-box2"></div>
+          <div class="orange-box3"></div>
+          </div>
       </div>
     </div>
     </div>
