--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <header>
     <div class="box">
       <div class="purple">
-      <div class="purple-box1"></div>
-      <div class="purple-box2"></div>
-      <div class="purple-box3"></div>
+      <div class="purple-box1 purple-box2 purple-box3"></div>
     </div>
     </div>
   </header>
