--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <header>
     <div class="box">
       <div class="purple">
-      <div class="purple-box1 purple-box2 purple-box3"></div>
+      <div class="purple-box"></div>
+      <div class="purple-box"></div>
+      <div class="purple-box"></div>
     </div>
     </div>
   </header>
