--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="green-box"></div>
       <div class="beside">
         <div class="beside-left">
-          <div class="orange-box1"></div>
-          <div class="orange-box2"></div>
-          <div class="orange-box3"></div>
+          <div class="orange-box"></div>
+          <div class="orange-box"></div>
+          <div class="orange-box"></div>
       </div>
     </div>
     </div>
