--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     </div>
     </div>
   </main>
-  <div class="footer"></div>
+  
+  <footer>
+    <div class="footer"></div>
+  </footer>
 </body>
 
 </html>
